[package]
name = "xtrf-rs"
version = "0.1.0"
authors = ["Igor Pietrzak igor.pietrzak70@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.113"
